--- a/assets/css/scss/lsx-projects.scss
+++ b/assets/css/scss/lsx-projects.scss
@@ -41,6 +41,16 @@
 .lsx-projects-shortcode {
 	margin-top: -4rem;
 }
+.gutenberg-compatible-template.using-gutenberg {
+	.entry-content {
+		.lsx-projects-shortcode {
+			> .row {
+				margin-left: auto;
+				margin-right: auto;
+			}
+		}
+	}
+}
 
 .lsx-projects-slot {
 	background-color: #fff;
